--- a/queenscorner-frontend/src/app/components/clientes/listar-clientes/listar-clientes.html
+++ b/queenscorner-frontend/src/app/components/clientes/listar-clientes/listar-clientes.html
@@ -49,7 +49,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let cliente of clientes" class="fila-cliente">
+          <tr *ngFor="let cliente of clientes" class="fila-cliente" (dblclick)="verDobleClick(cliente.id)">
             <td class="id">{{ cliente.id }}</td>
             <td class="nombre">{{ cliente.nombre }}</td>
             <td class="email">{{ cliente.email }}</td>
